Fixed background bug - Background color did not stretch full content - Set background to fixed and correct z index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,6 +39,7 @@ body {
     display: grid;
     grid-template-rows: max-content max-content max-content;
     background-color: var(--primary-color);
+    z-index: 1;
 }
 
 // Logo
@@ -84,7 +85,7 @@ body {
 
 #main {
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: max-content 1fr;
 }
 
 #top-menu {
@@ -95,7 +96,7 @@ body {
     width: -moz-calc(100% - var(--side-menu-width));
     width: calc(100% - var(--side-menu-width));
     background-color: var(--secondary-color);
-    z-index: 2;
+    z-index: 3;
 }
 
 #top-menu>.top {
@@ -201,19 +202,26 @@ body {
     color: white;
 }
 
+// Background Panel
+#background-panel {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--background-color);
+    z-index: 0;
+}
+
 // Content
 #content {
     position: relative;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    background-color: var(--background-color);
     left: var(--side-menu-width);
-    height: 100vh;
     width: -webkit-calc(100% - var(--side-menu-width));
     width: -moz-calc(100% - var(--side-menu-width));
     width: calc(100% - var(--side-menu-width));
-    z-index: 0;
+    z-index: 2;
 }
 
 #content>div>h3 {
